feat: Docs homepage

--- a/docs/content/docs/dependencies.mdx
+++ b/docs/content/docs/dependencies.mdx
@@ -111,7 +111,7 @@ npm install vite @vitejs/plugin-react
 ### Method 1: Using requirements.txt (Recommended)
 
 ```bash
-git clone https://github.com/yourusername/positron.git
+git clone https://github.com/tomlin7/positron.git
 cd positron
 pip install -r requirements.txt
 ```
@@ -119,7 +119,7 @@ pip install -r requirements.txt
 ### Method 2: Using setup.py
 
 ```bash
-git clone https://github.com/yourusername/positron.git
+git clone https://github.com/tomlin7/positron.git
 cd positron
 pip install -e .
 ```
