--- a/docs/content/docs/getting-started.mdx
+++ b/docs/content/docs/getting-started.mdx
@@ -18,7 +18,7 @@ Get up and running with Positron in 5 minutes!
 ### 1. Clone/Download Positron
 
 ```bash
-git clone https://github.com/yourusername/positron.git
+git clone https://github.com/tomlin7/positron.git
 cd positron
 ```
 
