--- a/docs/content/docs/installation.mdx
+++ b/docs/content/docs/installation.mdx
@@ -60,7 +60,7 @@ python -c "import tkinter; print('Tkinter OK')"
 ### Step 1: Clone Repository
 
 ```bash
-git clone https://github.com/yourusername/positron.git
+git clone https://github.com/tomlin7/positron.git
 cd positron
 ```
 
@@ -374,7 +374,7 @@ rm -rf positron
 If you encounter issues:
 
 1. Check [Dependencies](/docs/dependencies) for version requirements
-2. Search [GitHub Issues](https://github.com/yourusername/positron/issues)
+2. Search [GitHub Issues](https://github.com/tomlin7/positron/issues)
 3. Create a new issue with:
    - Your OS and Python version
    - Full error message
